product page updates

--- a/app/views/psd-revised-flow/inc_products_pg_attachments.html
+++ b/app/views/psd-revised-flow/inc_products_pg_attachments.html
@@ -12,4 +12,159 @@
                     </div>                    
                 </div>
 
-                <div style="display: block; width: 100%; height: 350px; background-color: #eee;"></div>
+                <ul class="govuk-list">
+                    <li>
+                
+                        <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--sm-font"><!--  opss-summary-list-mixed--sm-font -->
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                Type
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <abbr>XLSX</abbr>
+                                </dd>
+                            </div>
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Title
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <a href="#" class="govuk-link govuk-link--no-visited-state">Lorem ipsum file name</a>
+                                </dd>
+                            </div>
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Description
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam voluptatibus nostrum laudantium repudiandae in quam voluptatem laboriosam voluptas tenetur iure dolorem accusantium quasi sint porro, esse nihil atque, officiis dolores? 
+                                </dd>
+                            </div>                            
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Added
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    13 June 2022  
+                                </dd>
+                            </div>
+                        </dl>
+                
+                    </li>
+                    <li>
+                
+                        <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--sm-font">
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Type
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <abbr>PDF</abbr>
+                                </dd>
+                            </div>
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Title
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <a href="#" class="govuk-link govuk-link--no-visited-state">Lorem ipsum pdf file name</a>
+                                </dd>
+                            </div>
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Description
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Numquam voluptatibus nostrum laudantium repudiandae in quam voluptatem laboriosam voluptas tenetur iure dolorem accusantium quasi sint porro, esse nihil atque. 
+                                </dd>
+                            </div>                             
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Added
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    12 April 2022 
+                                </dd>
+                            </div>
+                
+                        </dl>
+                
+                    </li>
+                    <li>
+                
+                        <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--sm-font">
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                Type
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <abbr>PDF</abbr>
+                                </dd>
+                            </div>
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Title
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <a href="#" class="govuk-link govuk-link--no-visited-state">Lorem ipsum eccitii file name</a>
+                                </dd>
+                            </div>
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Description
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Numquam voluptatibus nostrum laudantium repudiandae in quam voluptatem laboriosam voluptas tenetur iure dolorem accusantium quasi sint porro, esse nihil atque. 
+                                </dd>
+                            </div>                            
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Added
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    22 March 2022  
+                                </dd>
+                            </div>
+                        </dl>
+                
+                    </li>
+                    <li>
+                
+                        <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--sm-font">
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Type
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <abbr>XSLX</abbr>
+                                </dd>
+                            </div>
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Title
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <a href="#" class="govuk-link govuk-link--no-visited-state">Ipsum lorem file name</a>
+                                </dd>
+                            </div>
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Description
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Ddolorem accusantium quasi sint porro, esse nihil atque. 
+                                </dd>
+                            </div>                             
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Added
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    12 December 2021 
+                                </dd>
+                            </div>
+                
+                        </dl>
+                
+                    </li>                    
+                </ul>
