--- a/app/views/psd-revised-flow/product-page.html
+++ b/app/views/psd-revised-flow/product-page.html
@@ -278,6 +278,9 @@
                 </dt>
                 <dd class="govuk-summary-list__value">
                     {% include "psd-revised-flow/inc_products-tab-counterfeit-value.html" %}
+                    <!-- OR 
+                    {% include "psd-revised-flow/inc_products-tab-counterfeit-yes.html" %}
+                    -->
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -391,7 +394,7 @@
             </div>
           </div>
 
-          <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">This product record is owned by your team<span class="opss-hidden-desktop">.</span><br class="opss-br-desktop"> You can <a href="/psd-revised-flow/product-page-edit.html" class="govuk-link govuk-link--no-visited-state">edit the product details</a><span class="opss-hidden-desktop">.</span></p>          
+          <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">This product record is currently owned by your team<span class="opss-hidden-desktop">.</span><br class="opss-br-desktop"> You can <a href="/psd-revised-flow/product-page-edit.html" class="govuk-link govuk-link--no-visited-state">edit the product details</a><span class="opss-hidden-desktop">.</span></p>          
 
 
     </section>
