--- a/app/views/psd-revised-flow/inc_tab-attachments-x2.html
+++ b/app/views/psd-revised-flow/inc_tab-attachments-x2.html
@@ -15,9 +15,19 @@
                     Title
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    <a href="theProductPageURL#accordion-attachments" class="govuk-link govuk-link--no-visited-state">Lorem ipsum file name</a>
+                    <a href="theProductPageURL#accordion-attachments" class="govuk-link govuk-link--no-visited-state" download="download">Lorem ipsum file name</a> <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                        (Download)
+                    </span>
                 </dd>
             </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Description
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    Numquam voluptatibus nostrum laudantium repudiandae in quam voluptatem laboriosam voluptas tenetur iure dolorem accusantium quasi sint porro, esse nihil atque. 
+                </dd>
+            </div>              
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Added
@@ -45,9 +55,19 @@
                     Title
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    <a href="theProductPageURL#accordion-attachments" class="govuk-link govuk-link--no-visited-state">Lorem ipsum pdf file name</a>
+                    <a href="theProductPageURL#accordion-attachments" class="govuk-link govuk-link--no-visited-state" download="download">Lorem ipsum pdf file name</a> <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                        (Download)
+                    </span>
                 </dd>
             </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Description
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    Numquam voluptatibus nostrum laudantium repudiandae in quam voluptatem laboriosam voluptas tenetur iure dolorem accusantium quasi sint porro, esse nihil atque. 
+                </dd>
+            </div>              
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Added
