--- a/app/views/psd-revised-flow/inc_tab-attachments-x2.html
+++ b/app/views/psd-revised-flow/inc_tab-attachments-x2.html
@@ -1,3 +1,5 @@
+<p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">There are 2 attachments added to this product record.</p>
+
 <ul class="govuk-list">
     <li>
 
