--- a/app/views/psd-revised-flow/inc_products_pg_content_safe.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_safe.html
@@ -325,7 +325,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-1">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-                    <p class="govuk-body-s govuk-!-padding-bottom-7 opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
+                    <p class="govuk-body-s opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
 
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
@@ -351,7 +351,7 @@
                 </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-1">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these 4 cases.</p>
 
                     {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
                 </div>
