--- a/app/views/psd-revised-flow/inc_products_pg_images.html
+++ b/app/views/psd-revised-flow/inc_products_pg_images.html
@@ -1,3 +1,4 @@
-<div style="display: block; width: 100%; height: 350px; background-color: #eee;"></div>
+{% include "psd-revised-flow/inc_tab-prod-imgs-sm-font.html" %}
+
 
 <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">These are product images &ndash; they <strong>are not</strong> case evidence images.</p>
