minor updates classes

--- a/app/views/psd-revised-flow/inc_products_pg_content_timestamped.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_timestamped.html
@@ -146,7 +146,9 @@
                                 <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>   
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                psd-122_1519211809934 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">  
+                                psd-122_1519211809934 
+                                <br>
+                                <span class="govuk-!-font-size-16 opss-secondary-text">  
                                     <span class="govuk-visually-hidden"> - </span>The <abbr>PSD</abbr> reference for this version of the product record - as recorded when the case was closed: 10 April 2022.
                                 </span>
                             </dd>
@@ -326,7 +328,7 @@
                 </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-2">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these 4 cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">The original product record was or is included in these 4 cases.</p>
 
                     {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
                 </div>
