--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -816,6 +816,16 @@ dl.opss-summary-list-aside {
             }  
         }
     }
+    .opss-summary-list-mixed.opss-summary-list--equal-last-2-wide {
+        div {
+            dt {
+                width: 20%;
+            }
+            dd {
+                width: 40%;
+            }  
+        }
+    }    
 }
 
 /* bespoke styles for Cases accordian section on a product page ... starts */
