--- a/app/views/psd-revised-flow/product-page-no-owner.html
+++ b/app/views/psd-revised-flow/product-page-no-owner.html
@@ -135,7 +135,7 @@
         
         <h4 class="govuk-heading-m govuk-!-margin-bottom-1 govuk-visually-hidden">Product details</h4>
 
-        <dl class="govuk-summary-list govuk-!-margin-top-8">
+        <dl class="govuk-summary-list govuk-!-margin-top-8 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
 
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
