--- a/app/views/cosmetics-general/ingredient-2c-remove-error.html
+++ b/app/views/cosmetics-general/ingredient-2c-remove-error.html
@@ -47,7 +47,7 @@
             <span class="govuk-visually-hidden">Error:</span> Select yes if you want to remove this ingredient
           </p>          
 
-          <div class="govuk-radios govuk-radios--conditional govuk-!-padding-top-3">
+          <div class="govuk-radios govuk-!-padding-top-3">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="remove" name="remove" type="radio" value="yes">
               <label class="govuk-label govuk-radios__label" for="remove">
