--- a/app/views/cosmetics-general/ingredient-2c-remove.html
+++ b/app/views/cosmetics-general/ingredient-2c-remove.html
@@ -29,7 +29,7 @@
             Ingredient 'Voluptas recusandae aliquid delectus' will be removed from this product. <!-- ... or from this Item -->
           </div>
 
-          <div class="govuk-radios govuk-radios--conditional govuk-!-padding-top-3">
+          <div class="govuk-radios govuk-!-padding-top-3">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="remove" name="remove" type="radio" value="yes">
               <label class="govuk-label govuk-radios__label" for="remove">
