add a product and help updates

--- a/app/views/psd-revised-flow/create-a-product-record-add.html
+++ b/app/views/psd-revised-flow/create-a-product-record-add.html
@@ -17,24 +17,18 @@
 <form novalidate="novalidate" action="/products/584" accept-charset="UTF-8" method="post">
     <input type="hidden" name="_method" value="put" autocomplete="off" />
     <input type="hidden" name="authenticity_token" value="b2sFwePi7Gt0sUjtNjhzyit+ogDwBoVmrSBjjjFNc2K27SdxJSP22B4vcaMS8AYQzpyXQSvmtJYsHpaONcWyfw==" autocomplete="off" />
+    
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds-from-desktop">
 
 
-        <!--span class="govuk-caption-l">Allegation: 2202-0005</span-->
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">Create a product record</h1>
-        
-        
-        <!--h2 class="govuk-heading-m">Add product</h2-->
-
 
         <p class="govuk-body govuk-!-margin-bottom-7 opss-secondary-text">
-          If a record of a product does not already exist in the <abbr title="Product Safety Database">PSD</abbr> database, you can create a product record for the product. This will also generate a new <abbr>PSD</abbr> product record reference number. 
+          If a record of a product does not already exist in the Product Safety Database (<abbr>PSD</abbr>), you can create a product record for the product. This will also generate a new <abbr>PSD</abbr> product record reference number. 
         </p>
-        
+ 
 
-
-        
 
         
   
