--- a/app/views/psd-revised-flow/create-a-product-record-edit.html
+++ b/app/views/psd-revised-flow/create-a-product-record-edit.html
@@ -24,12 +24,18 @@
     </div>
   
     <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-l">Product</span>
-      <h1 class="govuk-heading-l">Boots hand cream</h1>
-      <p class="govuk-caption-m">13 June 2022</p>
+        <div class="govuk-grid-column-two-thirds">
+          <!--span class="govuk-caption-l">Product</span-->
+          <h1 class="govuk-heading-l govuk-!-margin-bottom-2">Boots hand cream</h1>
+
+          <p class="govuk-body govuk-!-margin-bottom-7 opss-secondary-text">
+            If a record of a product does not already exist in the Product Safety Database (<abbr>PSD</abbr>), you can create a product record for the product. This will also generate a new <abbr>PSD</abbr> product record reference number. 
+          </p>
+
+
+          <!--p class="govuk-caption-m">13 June 2022</p-->
+        </div>
     </div>
-  </div>
   
   
     <div class="govuk-grid-row">
