--- a/app/views/psd-revised-flow/help.html
+++ b/app/views/psd-revised-flow/help.html
@@ -77,7 +77,7 @@
             About product records
         </h2>
 
-        <p class="govuk-body">
+        <p class="govuk-body govuk-!-margin-bottom-6">
             A product record only records information about a product which is, or has been, on the market (and does not include information about safety concerns or incidents).
         </p>
 
@@ -109,9 +109,9 @@
             <div class="govuk-details__text">
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-                    <li>We want the same product record (describing a specific product) to be used by all users creating a case about the <em>that</em> product</li>
+                    <li>We want the same product record (describing a specific product) to be used by all users creating a case about <em>that</em> product</li>
                     <li>Because a product record only describes the product - and not information about a case - it can be reused in many different cases and cases which might be reporting different safety concerns</li>
-                    <li>You may need to create your own version of a product record if an existing one doesn't fit your needs (or one doesn't already exist for your product)</li>
+                    <li>You may need to <strong>create your own product record</strong> if an existing one doesn't fit your needs or one doesn't already exist for your product</li>
                     <li>Because the same product record should be used by all users creating cases about the same product, it is important that editing is controlled: At any one time only one team can edit a product record - as the product record owner - but any team can provide a product record owner with additional information to add to the product record</li>
                     <li>You can remove a product record from your case at any time and add a different one to your case if necessary</li>
                     <li>A team is only a product record owner while the product record is included in one of their open cases</li>
