--- a/app/views/psd-revised-flow/indexx1.html
+++ b/app/views/psd-revised-flow/indexx1.html
@@ -615,6 +615,10 @@
 
         <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
             <li>
+                On the Product "search" pages - Your products <b>and</b> Team products: hazard type is no longer relervant to a product record, so we move the category column (thead, tfoot and column in the tbody) to become the second column and we move the Hazard type column to last row and it becomes the Counterfeit column. (The value of Yes - it <em>is</em> counterfiet - has additional <abbr>HTML</abbr>). It is now important for users to see the difference between a product record about product X which is the genuine product and a product record about product X which represents a counterfiet version of the product. (The headers and IDs "haztype" have been updated to "counterfeit"). We also change the sort option by hazard type to 'Counterfeit' which puts all counterfiet records to the top of the list. In the dropdown help section of the 'All search' we also update the last sentence<br>
+                <a href="/psd-revised-flow/new-products-example_your_and_team" class="govuk-link govuk-link--no-visited-state" target="_blank">Example of new table for Your/Team products</a>
+            </li>
+            <li>
                 <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/" target="_blank">All cases - Search page</a>
                 <br><span class="govuk-!-font-size-16">Shows revised list/search logic for included products in results and new case names.</span>.
             </li>
