--- a/app/views/psd-revised-flow/new-products-example_all.html
+++ b/app/views/psd-revised-flow/new-products-example_all.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-02.html" %}
 
 {% block pageTitle %}
-    Your products
+    All products - Search
 {% endblock %}
 
 
@@ -11,53 +11,164 @@
     <div class="govuk-grid-column-two-thirds opss-desktop-min-height--s"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-            Your products 
+            All products &ndash; Search
         </h1>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-1">
-            There are 23 products linked to open cases where you are the case owner. 
+        <p class="govuk-body opss-secondary-text">
+          Search all product records in the Product Safety Database (<abbr>PSD</abbr>).
         </p>
 
+        <details class="govuk-details opss-details--sm" data-module="govuk-details">
+            <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                    Help with the products search
+                </span>
+            </summary>
+            <div class="govuk-details__text">
+              <p class="govuk-body-s">
+                  <span id="search-hint">You can search for one or more products by using the keywords that describe them or use a single <abbr>PSD</abbr> reference number to find a specific product record.</span> You can also sort the ordering of the search results.
+              </p>
+              <p class="govuk-body-s govuk-!-margin-bottom-1">
+                  You can filter the results by product category.
+              </p>
+              <p class="govuk-body-s govuk-visually-hidden">
+                Search results appear within the following <code>form</code> and within the <code>role = region</code>.
+              </p>
+            </div>
+        </details>
     </div>
 
+    <div class="govuk-grid-column-one-third">
+      <div class="opss-text-align-right govuk-!-margin-bottom-8">
+          <a href="psd-revised-flow/create-a-product-record.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+              Create a product record
+          </a>            
+      </div>
+  </div>
 </div>
 
-<div class="govuk-grid-row opss-full-height">
+<form action="#" accept-charset="UTF-8" method="get" role="search" novalidate>
+  
+    <div class="govuk-grid-row opss-full-height">
+  
+        <section class="govuk-grid-column-one-quarter govuk-!-padding-right-1 opss-full-height__col">
 
-    <section class="govuk-grid-column-one-quarter govuk-!-padding-right-1 opss-full-height__col">
-
-        <a href="#page-content" class="govuk-skip-link opss-skip-link">
-            Skip to the main content
-        </a>
-
-        <nav aria-label="Secondary">
+          <nav aria-label="Secondary">
             <ul class="govuk-list opss-left-nav">
-                <li class="opss-left-nav__active">
-                  <a class="govuk-link govuk-link--no-visited-state" href="#" aria-current="page">Your products</a>
+                <li>
+                  <a class="govuk-link govuk-link--no-visited-state" href="new-products-example_your_and_team.html">Your products</a>
                 </li>
                 <li>
                   <a class="govuk-link govuk-link--no-visited-state" href="#">Team products</a>
                 </li>
-                <li>
-                  <a class="govuk-link govuk-link--no-visited-state" href="new-products-example_all.html">All products - Search</a>
+                <li class="opss-left-nav__active">
+                  <a class="govuk-link govuk-link--no-visited-state" aria-current="page" href="#">All products - Search</a>
                 </li>
             </ul>
           </nav>
 
-    </section>
+          <hr class="govuk-section-break govuk-section-break--visible govuk-!-margin-top-1 govuk-!-margin-bottom-6 govuk-!-margin-right-6">          
 
-    <section class="govuk-grid-column-three-quarters" id="page-content">
+          <h2 class="govuk-heading-s">
+              Filters<span class="govuk-visually-hidden">:</span>
+          </h2>
+  
+          <a href="#page-content" class="govuk-skip-link opss-skip-link opss-skip-link--mb">
+              Skip to results
+          </a>
+  
+          <div class="govuk-form-group govuk-!-margin-right-1">
+            <label class="govuk-label" for="hazard_type">Category</label>
 
-        <div class="govuk-grid-row">
+            <select class="govuk-select" id="hazard_type" name="hazard_type" data-opss-clear-on-reset="element">
+              <option class="govuk-!-font-size-16" value="" selected="selected">All</option>
+              <option class="govuk-!-font-size-16" value="Personal protective equipment (PPE)">Personal protective equipment (PPE)</option>
+              <option class="govuk-!-font-size-16" value="Hand sanitiser">Hand sanitiser</option>
+              <option class="govuk-!-font-size-16" value="Chemical products">Chemical products</option>
+              <option class="govuk-!-font-size-16" value="Childcare articles and children's equipment">Childcare articles and children's equipment</option>
+              <option class="govuk-!-font-size-16" value="Clothing, textiles and fashion items">Clothing, textiles and fashion items</option>
+              <option class="govuk-!-font-size-16" value="Communication and media equipment">Communication and media equipment</option>
+              <option class="govuk-!-font-size-16" value="Construction products">Construction products</option>
+              <option class="govuk-!-font-size-16" value="Cosmetics">Cosmetics</option>
+              <option class="govuk-!-font-size-16" value="Decorative articles">Decorative articles</option>
+              <option class="govuk-!-font-size-16" value="Eco-design">Eco-design</option>
+              <option class="govuk-!-font-size-16" value="Electrical appliances and equipment">Electrical appliances and equipment</option>
+              <option class="govuk-!-font-size-16" value="Explosive atmospheres equipment">Explosive atmospheres equipment</option>
+              <option class="govuk-!-font-size-16" value="Food-imitating products">Food-imitating products</option>
+              <option class="govuk-!-font-size-16" value="Furniture">Furniture</option>
+              <option class="govuk-!-font-size-16" value="Gadgets">Gadgets</option>
+              <option class="govuk-!-font-size-16" value="Gas appliances and components">Gas appliances and components</option>
+              <option class="govuk-!-font-size-16" value="Hand tools">Hand tools</option>
+              <option class="govuk-!-font-size-16" value="Hobby / sports equipment">Hobby / sports equipment</option>
+              <option class="govuk-!-font-size-16" value="Jewellery">Jewellery</option>
+              <option class="govuk-!-font-size-16" value="Kitchen / cooking accessories">Kitchen / cooking accessories</option>
+              <option class="govuk-!-font-size-16" value="Laser pointers">Laser pointers</option>
+              <option class="govuk-!-font-size-16" value="Lifts">Lifts</option>
+              <option class="govuk-!-font-size-16" value="Lighters">Lighters</option>
+              <option class="govuk-!-font-size-16" value="Lighting chains">Lighting chains</option>
+              <option class="govuk-!-font-size-16" value="Lighting equipment">Lighting equipment</option>
+              <option class="govuk-!-font-size-16" value="Machinery">Machinery</option>
+              <option class="govuk-!-font-size-16" value="Measuring instruments">Measuring instruments</option>
+              <option class="govuk-!-font-size-16" value="Motor vehicles (including spare parts)">Motor vehicles (including spare parts)</option>
+              <option class="govuk-!-font-size-16" value="Pressure equipment / vessels">Pressure equipment / vessels</option>
+              <option class="govuk-!-font-size-16" value="Pyrotechnic articles">Pyrotechnic articles</option>
+              <option class="govuk-!-font-size-16" value="Rail and guided transport">Rail and guided transport</option>
+              <option class="govuk-!-font-size-16" value="Recreational crafts">Recreational crafts</option>
+              <option class="govuk-!-font-size-16" value="Stationery">Stationery</option>
+              <option class="govuk-!-font-size-16" value="Toys">Toys</option>
+              <option class="govuk-!-font-size-16" value="Waste">Waste</option>
+              <option class="govuk-!-font-size-16" value="Other">Other</option>
+            </select>            
+          </div>
+  
+          <div class="govuk-button-group">
+              <button type="submit" class="govuk-button" data-module="govuk-button">
+                  Apply
+              </button>
+  
+              <button type="reset" class="govuk-button opss-button-link govuk-!-font-size-16 opss-nojs-hide" id="opss-reset" data-module="govuk-button">
+                  Reset
+              </button>
+          </div>
+  
+  
+          <div class="govuk-!-padding-top-2 govuk-!-padding-right-0 govuk-!-padding-bottom-1 govuk-!-padding-left-3 govuk-!-margin-bottom-3 opss-desktop-margin-bottom-220px opss-full-height__col--bottom opss-right-box-arrow">
+              <p class="govuk-body govuk-!-padding-bottom-1 govuk-!-margin-bottom-0 govuk-!-font-size-14">
+                  Request this list as a downloadable <br class="opss-br-desktop"><a href="/psd-general/cases-page-banner" class="govuk-link govuk-link--no-visited-state"><abbr title="Microsoft Excel Open XML Format Spreadsheet">XLSX</abbr> (spreadsheet)</a> file.
+              </p>
+          </div>
+  
+        </section>
 
-            <div class="govuk-grid-column-one-third opss-float-right-desktop">
+        <section class="govuk-grid-column-three-quarters" id="page-content">
+  
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+
+                <div class="govuk-form-group govuk-!-padding-bottom-2">
+                  <label class="govuk-label" for="businesses-search">
+                    Search
+                  </label>
+
+                  <div class="govuk-input__wrapper opss-search__wrapper">
+                    <input class="govuk-input govuk-input govuk-!-width-full" type="search" id="businesses-search" name="businesses-search" spellcheck="false" aria-describedby="search-hint">
+                    <button class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button">
+                        <span class="govuk-visually-hidden">Submit search</span>
+                    </button>
+                  </div>
+                </div>
+
+            </div>
+            <div class="govuk-grid-column-one-third">
                 <div class="govuk-form-group opss-text-align-right">
                         <fieldset id="sort-by-fieldset" class="opss-border-none govuk-!-padding-0 opss-nojs-hide">
                             <label class="govuk-label govuk-body-s" for="sort_by">
                                 Sort <span class="govuk-visually-hidden">the results</span> by
                             </label>
                             <select class="govuk-select govuk-!-margin-bottom-1" id="sort_by">
-                            <option selected="selected" data-url="/products?sort_by=created_at">Newly added</option><option data-url="/products?sort_by=name&amp;sort_dir=asc">Name A-Z</option><option data-url="/products?sort_by=name&amp;sort_dir=desc">Name Z-A</option>
+                              <option selected="selected" data-url="/products?sort_by=created_at">Newly added</option>
+                              <option data-url="/products?sort_by=name&amp;sort_dir=asc">Name A-Z</option>
+                              <option data-url="/products?sort_by=name&amp;sort_dir=desc">Name Z-A</option>
                             </select>
                         </fieldset>
   
@@ -66,27 +177,32 @@
                                 Sort <span class="govuk-visually-hidden">the results</span> by
                             </dt>
                             <dd>
-                                <a href="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt1">Newly added</a>
+                                <a href="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt1">Option 1</a>
                             </dd>
                             <dd>
                                 <a href="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt2">
-                                  <span class="govuk-visually-hidden">Active: </span>Name A-Z
+                                  <span class="govuk-visually-hidden">Active: </span>Option 2
                                 </a>
                             </dd>
                             <dd class="opss-dl-select__active">
                                 <a href="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt3">
-                                    Name Z-A
+                                    Option 3
                                 </a>
                             </dd>
                         </dl>
                   </div>
             </div>
-            
-        </div>        
+          </div>
 
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full" role="region" aria-label="Products">
-
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-full">
+              <p class="govuk-body">12 products matching keyword(s) <span class="govuk-!-font-weight-bold">Lorem, consectetur, ipsum</span>, were found.</p>
+            </div>
+          </div>          
+  
+          <div class="govuk-grid-row">
+              <div class="govuk-grid-column-full" role="region" aria-label="Products">
+  
                 <table class="govuk-table opss-table-items opss-table-items--sm">
                   <caption class="govuk-visually-hidden">
                       Products: 5 columns with each case described across rows within each table body.
@@ -448,7 +564,8 @@
                   </tfoot>
 
                 </table>     
-
+               
+  
                 <nav class="opss-pagination-link opss-pagination-link--no-top-border">
                     <ul>
                         <li class="opss-pagination-link__wrap opss-pagination-link--prev">
@@ -466,13 +583,16 @@
                         </li>
                     </ul>
                 </nav>
+  
+  
+              </div>
+          </div>
+  
+        </section>
+  
+    </div>
 
+</form>
 
-            </div>
-        </div>        
-
-    </section>
-
-</div>
 
 {% endblock %}
