note update on cases search pages

--- a/app/views/psd-revised-flow/indexx1.html
+++ b/app/views/psd-revised-flow/indexx1.html
@@ -627,7 +627,7 @@
                         Example of <a href="/psd-revised-flow/new-cases-example_your_and_team" class="govuk-link govuk-link--no-visited-state" target="_blank">new table for Your/Team cases</a> pages   
                     </li>
                     <li>
-                        There is a <b>significant change</b> to the results and what the search works on: legacy cases (closed) continue with their case name format (which is searched upon), but all new cases going forwards now only feature the offical 'Case name' in the results (and is used within the search logic. This new case name is a new page/feature in the TSO create a case journey.
+                        There is a <b>significant change</b> to the results and what the search works on: legacy cases (closed) continue with their case name format (which is searched upon), but all new cases going forwards now only feature the offical 'Case name' in the results (and is used within the search logic. This new case name is a new page/feature in the TSO create a case journey. (The legacy cases names continue with the hazard type appended to the product title although hazard type is now repeated in the new table column. These cases will quickly be replaced by newer cases).
                     </li>
                     <li>
                         Updated design for <a href="/psd-revised-flow/new-cases-example_all" class="govuk-link govuk-link--no-visited-state" target="_blank">All cases</a> - search page: In addition to the updated table (as above), we add the new filter 'Hazard type' to the bottom of the filters list (within 'More options'); we can take this from the current 'All products - Search' page.
