latest updates for COS templating

--- a/app/views/cosmetics-clone/index.html
+++ b/app/views/cosmetics-clone/index.html
@@ -81,26 +81,18 @@
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-clone/notification-1.html" target="_blank">A notified product</a>
                 <br><span class="govuk-!-font-size-16">Includes small text 'Create notification template' link. </span>.
-
-                <!--ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
-                    <li>
-                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/why-are-you-creating-a-case-error.html" target="_blank">Why are you creating a case? - error</a>
-                    </li>
-                </ul-->                
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-clone/what-is-the-name-2.html" target="_blank">What is the product name?
                 </a>
                 <br><span class="govuk-!-font-size-16">Error message: "Enter the product name" (if left blank)</span>.
 
-                <!--ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
+                
+                <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
-                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/why-is-the-product-of-concern-error.html" target="_blank">Why is the product of concern? - error 1</a>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-clone/what-is-the-name-2_alt" target="_blank">What is the product name?</a> - an alternative design
                     </li>
-                    <li>
-                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/why-is-the-product-of-concern-error-2.html" target="_blank">Why is the product of concern? - error 2</a>
-                    </li>
-                </ul-->                 
+                </ul>                   
             </li>             
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-clone/confirmation-3.html" target="_blank">Draft created confirmation</a>
