--- a/app/views/cosmetics-clone/confirmation-3.html
+++ b/app/views/cosmetics-clone/confirmation-3.html
@@ -29,7 +29,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p class="govuk-body govuk-!-margin-bottom-4">The new draft product notification has been created using one of your own product notifications as a template. It is now in the drafts section of your <a href="#" class="govuk-link govuk-link--no-visited-state">cosmetic products page</a>; from where you can continue to refine its details before you accept and submit it.</p>
+      <p class="govuk-body govuk-!-margin-bottom-4">The new draft product notification has been created using one of your own product notifications as a template. It is now in the drafts section of your <a href="#" class="govuk-link govuk-link--no-visited-state">cosmetic products page</a>; from where you can continue to edit it before you accept and submit it.</p>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
