--- a/app/views/cosmetics-general/tasks/pg-success-create.html
+++ b/app/views/cosmetics-general/tasks/pg-success-create.html
@@ -33,7 +33,7 @@
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-      <p class="govuk-body">Start the next task on the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
+      <p class="govuk-body-l">Start the next task on the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
     </div>
   </div>
 
